src/objects/AE_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>AE Details</relationshipLabel>
        <relationshipName>AE_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>AE_Detail__c</referenceTo>
        <relationshipLabel>AE Details</relationshipLabel>
        <relationshipName>AE_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Hospitalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was patient hospitalized since the last AE report?</description>
        <inlineHelpText>Was patient hospitalized since the last AE report?</inlineHelpText>
        <label>Patient Hospitalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AE_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestHarnessId__c</fullName>
        <externalId>true</externalId>
        <label>TestHarnessId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>AE Details</relationshipLabel>
        <relationshipName>AE_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>caAERS_report_filed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was a caAERS report filed with the DCC since the last assessment?</description>
        <inlineHelpText>Was a caAERS report filed with the DCC since the last assessment?</inlineHelpText>
        <label>caAERS report filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_AEDetail_id__c</fullName>
        <label>pg_AEDetail_id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>AE Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>AE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Details</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Visit_Date_Cannot_be_a_future_date</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Visit_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Visit_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>